small updates and bug fixes